--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo whatever",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "rimraf dist && webpack --config webpack.prod.config.js --progress --profile --color"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
@@ -19,7 +20,9 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.1"
